--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GFJ44VE67C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-GFJ44VE67C');
+    </script>
     <style>
         /* base styles */
         body {
@@ -103,7 +112,8 @@
                         <button type="submit" class="btn btn-primary">Add Scores</button>
                     </div>
                 </div>
-                <span class="text-muted h6">If the score is a dash, the player's score as the sum of all other players' scores</span>
+                <span class="text-muted h6">If the score is a dash, the player's score as the sum of all other players'
+                    scores</span>
             </div>
         </form>
         <hr>
