add confirm dialog

--- a/index.html
+++ b/index.html
@@ -203,11 +203,28 @@
 
             // Handle reset button click
             $('#reset-button').click(function () {
-                localStorage.removeItem('players');
-                localStorage.removeItem('matches');
-                players = [];
-                matches = [];
-                renderTable();
+                Swal.fire({
+                    title: 'Are you sure?',
+                    text: "You won't be able to revert this!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Yes, delete it!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        localStorage.removeItem('players');
+                        localStorage.removeItem('matches');
+                        players = [];
+                        matches = [];
+                        renderTable();
+                        Swal.fire(
+                            'Deleted!',
+                            'Your file has been deleted.',
+                            'success'
+                        )
+                    }
+                })
             });
 
             // Handle history button click
