--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Points Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/86670683">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GFJ44VE67C"></script>
